<resources>
    <string name="app_name">Liv4TSkool</string>
    <string name="title_activity_principal">Liv4TSkool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">USUARIO APELLIDO</string>
    <string name="nav_header_subtitle">ESTUDIANTE</string>
    <string name="nav_header_tutor_subtitle">TUTOR</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="passwordconfirm">Confirmar Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registro">REGISTRARSE</string>
    <string name="tutor">TUTOR</string>
    <string name="estudiante">ESTUDIANTE</string>
    <string name="ingresar">INGRESAR</string>
    <string name="seleccionar">Seleccionar...</string>
    <string name="noconnection">Conéctese a una red WIFI o active los datos móviles</string>
    <string name="update_details"> Actualizar datos</string>
    <string name="olvidecontrasena"> OLVIDÉ MI CONTRASEÑA</string>
    <string name="textolvide"> Solo necesitamos su cuenta de correo electrónico registrada para enviarle las instrucciones de reestablecimiento de contraseña</string>

    <string name="add_item">Add First Item</string>


    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint_item">Enter Grocery</string>
    <string name="quantity_hint">Quantity</string>
    <string name="save_title">Save</string>
    <string name="title_activity_list">Grocery List</string>
    <string name="sure_text">¿Estás seguro que deseas eliminar el curso del carrito de compras?</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="details_activity">Grocery Details</string>
    <string name="date">Date :</string>
    <string name="quantity">Qty :</string>
    <string name="groceryname">Groceryname</string>
    <string name="hello_world">Hello world!</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="desc_content">     Android powers hundreds of millions of mobile devices in more than 190 countries around the world. It\'s the largest installed base of any mobile platform and growing fast—every day another million users power up their Android devices for the first time and start looking for apps, games, and other digital content.

Android gives you a world-class platform for creating apps and games for Android users everywhere, as well as an open marketplace for distributing to them instantly.
</string>
    <string name="title_activity_tutor_principal">TutorPrincipalActivity</string>
    <string name="menu_home">Home</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="perfil">Mi perfil</string>

    <string name="cursosdisp">Cursos Disponibles</string>
    <string name="miscursos">Mis Cursos</string>
    <string name="misactividades">Mis Actividades</string>
    <string name="miscalificaciones">Mis Calificaciones</string>
    <string name="miscertificados">Mis Certificados</string>
    <string name="misevaluaciones">Mis Evaluaciones</string>
    <string name="consultas">Consultas</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>


    <string-array name="spinner">

        <item>Seleccionar...</item>
        <item>Docente</item>
        <item>Estudiante</item>

    </string-array>

    <string-array name="consulta">

        <item>Seleccionar...</item>
        <item>Consulta Online</item>
        <item>Consulta Offline</item>
    </string-array>


    <string name="registermail1">¡Este es Diago y Benitez, CEO de Web API! \n \n¡Bienvenido a bordo con nosotros en nombre de nuestro equipo! \n
     ¡Prometemos brindarle una experiencia de compra inolvidable en el futuro! \n \n
     Entonces, ¿qué estás esperando, comienza a comprar y obtén lo mejor de nuestros productos justo en tu puerta!
     \n \n
     ¡Estamos felices de ayudarte! ¡En caso de cualquier consulta, contáctenos a nuestros manejadores mencionados a continuación! \n \n
     Teléfono: + 571-78508229 \n
     Correo electrónico: prueba.correo7521@gmail.com \n
     Dirección: Calle 100 # 8a 55 (226025)</string>

    <string name="cambiar">Cambiar Contraseña</string>
    <string name="title_activity_ejemploactivida">Ejemploactivida</string>
    <string name="msg_subscribed">Tema Inscrito</string>
    <string name="msg_subscribe_failed">Tema no Inscrito</string>

    <string-array name="Actividades">

        <item>Cuestionario 4 Preguntas</item>

    </string-array>
    <string name="instructions">Descubre dos cartas iguales a la vez para eliminarlas del juego. \nCuidado con el temporizador, cuanto menos tiempo pases, más puntos anotarás \n pero asegúrate de terminar antes de que se acabe el tiempo.</string>

    <string name="URL_SERVER">http://192.168.0.13/webdyb/loginapp/insertarMensaje.php</string>

    <string name="select_picture_title">Obtener Foto De</string>
    <string name="voice_not_found">Voz No encontrada</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="title_activity_planificacion_general">PlanificacionGeneral</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
