<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil_tutor"
            android:icon="@drawable/ic_icono_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_mis_cursos_tutor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/miscursos" />
        <item
            android:id="@+id/nav_mis_activi"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/misactividades" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/misevaluaciones" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/consultas" />
    </group>

    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_cerrar"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/cerrarsesion" />
        </menu>
    </item>

</menu>
