<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_icono_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_cursos"
            android:title="@string/cursosdisp" />
        <!--item
            android:id="@+id/nav_mis_cursos"
            android:icon="@drawable/ic_curso"
            android:title="Mis Cursos" /-->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_icono_calificaciones1"
            android:title="@string/miscursos" />
        <item
            android:id="@+id/nav_calificaciones"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/miscalificaciones" />
    </group>



            <item
                android:id="@+id/nav_certificados"
                android:icon="@drawable/ic_icono_doc"
                android:title="@string/miscertificados" />
            <item
                android:id="@+id/nav_cerrar_sesion"
                android:icon="@drawable/ic_close_black_24dp"
                android:title="@string/cerrarsesion" />



</menu>
