<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    tools:context=".Login.PreLoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="#10000000"
        android:id="@+id/layo_ini"
        android:paddingTop="29dp">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="20dp"
                android:fontFamily="@font/centurygothic"
                android:textColor="@color/colortextoblanco"
                android:gravity="center"
                android:textStyle="bold">

            </TextView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/layout_media"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/llDistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:elevation="2dp"
                        android:padding="15dp"
                        android:src="@drawable/logof" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llCall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/compartir"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:elevation="2dp"
                        android:padding="15dp"
                        android:src="@drawable/gorjeo" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mapa"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:elevation="2dp"
                        android:padding="15dp"
                        android:src="@drawable/google" />

                </LinearLayout>


            </LinearLayout>





        </LinearLayout>


        <Button
            android:id="@+id/btn_loginestu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1.0"
            android:text="@string/estudiante"
            android:fontFamily="@font/centurygothic"
            android:textStyle="bold"
            android:textColor="@color/color"
            android:textAllCaps="false"
            android:background="@drawable/oval"
/>

        <Button
            android:id="@+id/btn_loginestu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/oval"
            android:fontFamily="@font/centurygothic"
            android:text="@string/tutor"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/color" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_loginestu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ovalorange"
                android:text="@string/iniciar"
                android:textStyle="bold"
                android:fontFamily="@font/centurygothic"
                android:textColor="@color/colortextoblanco" />

        </LinearLayout>
        <TextView
            android:id="@+id/text_registro"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:textColor="@color/color"
            android:fontFamily="@font/centurygothic"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro" />



    </LinearLayout>
    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goButtonLayout"
        android:layout_below="@+id/layo_ini"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:layout_gravity="center|bottom"

            android:src="@drawable/livetech">

        </ImageView>
    </LinearLayout-->

    <ImageView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|bottom"
        android:layout_below="@+id/layo_ini"
        android:src="@drawable/livetech">

    </ImageView>

</RelativeLayout>