<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".Estudiante.Login.LoginActivity">



<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="50dp"
        android:id="@+id/layout_reg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="@color/colortextoblanco"
            android:gravity="center"
            android:textStyle="bold">

        </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/layout_media"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/llDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/facebook"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:padding="15dp"
                android:src="@drawable/logof" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/compartir"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:padding="15dp"
                android:src="@drawable/gorjeo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mapa"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:elevation="2dp"
                android:padding="15dp"
                android:src="@drawable/google" />

        </LinearLayout>


    </LinearLayout>





    </LinearLayout>


        <!--EditText

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/correo"
            android:textColor="@color/colortexto"
            android:id="@+id/email"

            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" /-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colortexto"

        android:layout_below="@id/layout_media">
        <EditText
            android:inputType="textEmailAddress"
            android:hint="Correo"
            android:textColor="#000"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutpassword"
        android:layout_width="match_parent"
        android:textColorHint="@color/colortexto"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutemail"
        app:passwordToggleEnabled="true">
        <EditText

            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/colortexto"
            android:id="@+id/password"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />
    </android.support.design.widget.TextInputLayout>

       

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorbonton"
            android:gravity="center_horizontal"
            android:text="@string/iniciar"
            android:textColor="@color/colortextoblanco" />

    </LinearLayout>

</LinearLayout>

    <TextView
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/registro"
        android:textColor="@color/colorPrimaryDark" />


    <ImageView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|bottom"
        android:layout_below="@+id/layo_ini"
        android:src="@drawable/livetech">

    </ImageView>

</RelativeLayout>